open-webui/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    argocd.argoproj.io/ignore-healthcheck: "true"
  name: ollama
  namespace: open-webui
spec:
  tls:
    - hosts:
        - gpt.cloud.traunseenet.com
      secretName: letsencrypt-prod-gpt
  ingressClassName: traefik
  rules:
    - host: gpt.cloud.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  number: 80
            path: /
            pathType: Prefix
